--- a/po/da.po
+++ b/po/da.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: da\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-06-08 11:32+0200\n"
+"POT-Creation-Date: 2007-06-13 11:27+0200\n"
 "PO-Revision-Date: 2007-05-10 15:48+0200\n"
 "Last-Translator: Keld Simonsen <keld@rap.dk>\n"
 "Language-Team:  <da@li.org>\n"
@@ -20,7 +20,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.10.2\n"
 
-#: src/libvirt.c:299 src/hash.c:664
+#: src/libvirt.c:303 src/hash.c:664
 msgid "allocating connection"
 msgstr "allokerer forbindelse"
 
@@ -653,6 +653,11 @@ msgstr "udskriv hjælp"
 msgid "Prints global help or command specific help."
 msgstr "Udskriv global hjælp eller udbed specifik hjælp."
 
+#: src/virsh.c:312
+#, fuzzy
+msgid "name of command"
+msgstr "navn for det inaktive domæne"
+
 #: src/virsh.c:324
 msgid ""
 "Commands:\n"
@@ -953,7 +958,7 @@ msgid "cap for XEN_CREDIT"
 msgstr ""
 
 #: src/virsh.c:1054 src/virsh.c:1058
-msgid "Scheduler:"
+msgid "Scheduler"
 msgstr ""
 
 #: src/virsh.c:1058
@@ -1606,6 +1611,15 @@ msgstr "kommandoen '%s' findes ikke"
 #: src/virsh.c:2872
 msgid "  NAME\n"
 msgstr "  NAVN\n"
+
+#: src/virsh.c:2876
+#, fuzzy
+msgid ""
+"\n"
+"  SYNOPSIS\n"
+msgstr ""
+"\n"
+"  FLAG\n"
 
 #: src/virsh.c:2883
 msgid ""
