--- a/po/nb.po
+++ b/po/nb.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: libvirt\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-06-08 11:32+0200\n"
+"POT-Creation-Date: 2007-06-13 11:27+0200\n"
 "PO-Revision-Date: 2007-04-26 23:43+0100\n"
 "Last-Translator: Espen A. Stefansen <espenas@gmail.com>\n"
 "Language-Team: Norwegian/Bokmaal <i18n-nb@lister.ping.uio.no>\n"
@@ -17,7 +17,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: src/libvirt.c:299 src/hash.c:664
+#: src/libvirt.c:303 src/hash.c:664
 msgid "allocating connection"
 msgstr "allokerer tilkobling"
 
@@ -659,6 +659,10 @@ msgstr ""
 msgid "Prints global help or command specific help."
 msgstr ""
 
+#: src/virsh.c:312
+msgid "name of command"
+msgstr ""
+
 #: src/virsh.c:324
 msgid ""
 "Commands:\n"
@@ -959,7 +963,7 @@ msgid "cap for XEN_CREDIT"
 msgstr ""
 
 #: src/virsh.c:1054 src/virsh.c:1058
-msgid "Scheduler:"
+msgid "Scheduler"
 msgstr ""
 
 #: src/virsh.c:1058
@@ -1623,6 +1627,15 @@ msgstr "kommando '%s' eksisterer ikke"
 #: src/virsh.c:2872
 msgid "  NAME\n"
 msgstr "  NAVN\n"
+
+#: src/virsh.c:2876
+#, fuzzy
+msgid ""
+"\n"
+"  SYNOPSIS\n"
+msgstr ""
+"\n"
+"  VALG\n"
 
 #: src/virsh.c:2883
 msgid ""
