--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Wed Jun 13 11:30:28 CEST 2007 Daniel Veillard <veillard@redhat.com>
+
+	* src/virsh.c: patch from Saori Fukuta for messages
+	* *.po: updated with the patch from Saori Fukuta and merge from
+	  the i18n CVS base.
+
 Mon Jun 11 14:49:00 BST 2007 Richard W.M. Jones <rjones@redhat.com>
 
 	* docs/examples/index.py: Autogenerate Makefile.am and
