--- a/po/fr.po
+++ b/po/fr.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: fr\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-06-08 11:32+0200\n"
+"POT-Creation-Date: 2007-06-13 11:27+0200\n"
 "PO-Revision-Date: 2007-05-04 10:45+0200\n"
 "Last-Translator: Alain PORTAL <aportal@univ-montp2.fr>\n"
 "Language-Team: Français <traduc@traduc.org>\n"
@@ -21,7 +21,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.11.4\n"
 
-#: src/libvirt.c:299 src/hash.c:664
+#: src/libvirt.c:303 src/hash.c:664
 msgid "allocating connection"
 msgstr "allocation de connexion"
 
@@ -656,6 +656,11 @@ msgstr "imprimer l'aide"
 msgid "Prints global help or command specific help."
 msgstr "Imprime l'aide globale ou l'aide d'une commande spécifique."
 
+#: src/virsh.c:312
+#, fuzzy
+msgid "name of command"
+msgstr "nom du domaine inactif"
+
 #: src/virsh.c:324
 msgid ""
 "Commands:\n"
@@ -956,7 +961,7 @@ msgid "cap for XEN_CREDIT"
 msgstr ""
 
 #: src/virsh.c:1054 src/virsh.c:1058
-msgid "Scheduler:"
+msgid "Scheduler"
 msgstr ""
 
 #: src/virsh.c:1058
@@ -1611,6 +1616,15 @@ msgstr "la commande « %s » n'existe pas"
 #: src/virsh.c:2872
 msgid "  NAME\n"
 msgstr "  NOM\n"
+
+#: src/virsh.c:2876
+#, fuzzy
+msgid ""
+"\n"
+"  SYNOPSIS\n"
+msgstr ""
+"\n"
+"  OPTIONS\n"
 
 #: src/virsh.c:2883
 msgid ""
