--- a/po/ms.po
+++ b/po/ms.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: libvirt\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-06-08 11:32+0200\n"
+"POT-Creation-Date: 2007-06-13 11:27+0200\n"
 "PO-Revision-Date: 2007-05-17 22:28+0800\n"
 "Last-Translator: Sharuzzaman Ahmat Raslan <sharuzzaman@myrealbox.com>\n"
 "Language-Team: ms <ms@li.org>\n"
@@ -15,7 +15,7 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: src/libvirt.c:299 src/hash.c:664
+#: src/libvirt.c:303 src/hash.c:664
 #, fuzzy
 msgid "allocating connection"
 msgstr "Sambungan Masatamat:"
@@ -729,6 +729,11 @@ msgstr "-h            cetak bantuan ini\n"
 msgid "Prints global help or command specific help."
 msgstr ""
 
+#: src/virsh.c:312
+#, fuzzy
+msgid "name of command"
+msgstr "Sistem Nama Domain"
+
 #: src/virsh.c:324
 #, fuzzy
 msgid ""
@@ -1054,7 +1059,7 @@ msgid "cap for XEN_CREDIT"
 msgstr ""
 
 #: src/virsh.c:1054 src/virsh.c:1058
-msgid "Scheduler:"
+msgid "Scheduler"
 msgstr ""
 
 #: src/virsh.c:1058
@@ -1771,6 +1776,13 @@ msgstr "Peranti '$device' tidak wujud"
 #, fuzzy
 msgid "  NAME\n"
 msgstr " Nama   : "
+
+#: src/virsh.c:2876
+#, fuzzy
+msgid ""
+"\n"
+"  SYNOPSIS\n"
+msgstr "Pilihan"
 
 #: src/virsh.c:2883
 #, fuzzy
