--- a/po/nso.po
+++ b/po/nso.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: libvirt\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-06-08 11:32+0200\n"
+"POT-Creation-Date: 2007-06-13 11:27+0200\n"
 "PO-Revision-Date: 2006-11-27 16:59+0100\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -16,7 +16,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-#: src/libvirt.c:299 src/hash.c:664
+#: src/libvirt.c:303 src/hash.c:664
 msgid "allocating connection"
 msgstr "allocating connection"
 
@@ -659,6 +659,11 @@ msgstr "print help"
 msgid "Prints global help or command specific help."
 msgstr "Prints global help or command specific help."
 
+#: src/virsh.c:312
+#, fuzzy
+msgid "name of command"
+msgstr "name of the inactive domain"
+
 #: src/virsh.c:324
 msgid ""
 "Commands:\n"
@@ -960,7 +965,7 @@ msgid "cap for XEN_CREDIT"
 msgstr ""
 
 #: src/virsh.c:1054 src/virsh.c:1058
-msgid "Scheduler:"
+msgid "Scheduler"
 msgstr ""
 
 #: src/virsh.c:1058
@@ -1645,6 +1650,15 @@ msgstr "command '%s' doesn't exist"
 #: src/virsh.c:2872
 msgid "  NAME\n"
 msgstr "  NAME\n"
+
+#: src/virsh.c:2876
+#, fuzzy
+msgid ""
+"\n"
+"  SYNOPSIS\n"
+msgstr ""
+"\n"
+"  OPTIONS\n"
 
 #: src/virsh.c:2883
 msgid ""
