--- a/po/pa.po
+++ b/po/pa.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: pa\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-06-08 11:32+0200\n"
+"POT-Creation-Date: 2007-06-13 11:27+0200\n"
 "PO-Revision-Date: 2007-04-12 06:54+0530\n"
 "Last-Translator: A S Alam <aalam@users.sf.net>\n"
 "Language-Team: Punjabi <punjabi-l10n@lists.sf.net>\n"
@@ -18,7 +18,7 @@ msgstr ""
 "X-Generator: KBabel 1.11.4\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-#: src/libvirt.c:299 src/hash.c:664
+#: src/libvirt.c:303 src/hash.c:664
 msgid "allocating connection"
 msgstr "ਕੁਨੈਕਸ਼ਨ ਦਿੱਤੀ ਜਾ ਰਿਹਾ ਹੈ"
 
@@ -652,6 +652,11 @@ msgstr "ਸਹਾਇਤਾ ਛਾਪੋ"
 msgid "Prints global help or command specific help."
 msgstr "ਗਲੋਬਲ ਸਹਾਇਤਾ ਜਾਂ ਖਾਸ ਕਮਾਂਡ ਸਹਾਇਤਾ ਛਾਪੋ।"
 
+#: src/virsh.c:312
+#, fuzzy
+msgid "name of command"
+msgstr "ਨਾ-ਸਰਗਰਮ ਡੋਮੇਨ ਦਾ ਨਾਂ"
+
 #: src/virsh.c:324
 msgid ""
 "Commands:\n"
@@ -951,7 +956,7 @@ msgid "cap for XEN_CREDIT"
 msgstr ""
 
 #: src/virsh.c:1054 src/virsh.c:1058
-msgid "Scheduler:"
+msgid "Scheduler"
 msgstr ""
 
 #: src/virsh.c:1058
@@ -1609,6 +1614,15 @@ msgstr "ਕਮਾਂਡ '%s' ਮੌਜੂਦ ਨਹੀਂ ਹੈ"
 #: src/virsh.c:2872
 msgid "  NAME\n"
 msgstr "  ਵੇਰਵਾ\n"
+
+#: src/virsh.c:2876
+#, fuzzy
+msgid ""
+"\n"
+"  SYNOPSIS\n"
+msgstr ""
+"\n"
+"  ਚੋਣਾਂ\n"
 
 #: src/virsh.c:2883
 msgid ""
