--- a/po/pl.po
+++ b/po/pl.po
@@ -5,15 +5,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: pl\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-06-08 11:32+0200\n"
-"PO-Revision-Date: 2007-06-06 14:00+0200\n"
+"POT-Creation-Date: 2007-06-13 11:27+0200\n"
+"PO-Revision-Date: 2007-06-10 17:23+0200\n"
 "Last-Translator: Piotr Drąg <raven@pmail.pl>\n"
 "Language-Team: Polish <pl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: src/libvirt.c:299 src/hash.c:664
+#: src/libvirt.c:303 src/hash.c:664
 msgid "allocating connection"
 msgstr "przydzielanie połączenia"
 
@@ -27,7 +27,7 @@ msgstr "błąd"
 
 #: src/virterror.c:350
 msgid "No error message provided"
-msgstr "Nie dostarczono komunikatu błędu"
+msgstr "Nie podano komunikatu błędu"
 
 #: src/virterror.c:405
 #, c-format
@@ -354,14 +354,13 @@ msgid "GNUTLS call error"
 msgstr "błąd wywołania GNUTLS"
 
 #: src/virterror.c:633
-#, fuzzy
 msgid "Failed to find the network"
-msgstr "Usunięcie określenia sieci %s nie powiodło się"
+msgstr "Znalezienie sieci nie powiodło się"
 
 #: src/virterror.c:635
-#, fuzzy, c-format
+#, c-format
 msgid "Failed to find the network: %s"
-msgstr "Usunięcie określenia sieci %s nie powiodło się"
+msgstr "Znalezienie sieci nie powiodło się: %s"
 
 #: src/xmlrpc.c:63
 msgid "copying node content"
@@ -644,6 +643,11 @@ msgstr "wyświetl pomoc"
 #: src/virsh.c:306
 msgid "Prints global help or command specific help."
 msgstr "Wyświetl pomoc globalną lub określoną dla polecenia."
+
+#: src/virsh.c:312
+#, fuzzy
+msgid "name of command"
+msgstr "nazwa nieaktywnej domeny"
 
 #: src/virsh.c:324
 msgid ""
@@ -946,7 +950,8 @@ msgid "cap for XEN_CREDIT"
 msgstr "nakrycie XEN_CREDIT"
 
 #: src/virsh.c:1054 src/virsh.c:1058
-msgid "Scheduler:"
+#, fuzzy
+msgid "Scheduler"
 msgstr "Planista:"
 
 #: src/virsh.c:1058
@@ -1596,6 +1601,15 @@ msgstr "polecenie \"%s\" nie istnieje"
 msgid "  NAME\n"
 msgstr "  NAZWA\n"
 
+#: src/virsh.c:2876
+#, fuzzy
+msgid ""
+"\n"
+"  SYNOPSIS\n"
+msgstr ""
+"\n"
+"  OPCJE\n"
+
 #: src/virsh.c:2883
 msgid ""
 "\n"
@@ -1752,25 +1766,24 @@ msgid "failed to connect to the hypervisor"
 msgstr "połączenie się z hypervisorem nie powiodło się"
 
 #: src/virsh.c:3544
-#, fuzzy
 msgid "failed to get the log file information"
-msgstr "uzyskanie informacji o węźle nie powiodło się"
+msgstr "uzyskanie informacji o pliku dziennika nie powiodło się"
 
 #: src/virsh.c:3549
 msgid "the log path is not a file"
-msgstr ""
+msgstr "ścieżka do dziennika nie jest plikiem"
 
 #: src/virsh.c:3555
 msgid "failed to open the log file. check the log file path"
 msgstr ""
+"otwarcie pliku dziennika nie powiodło się. sprawdź ścieżkę do pliku dziennika"
 
 #: src/virsh.c:3623
-#, fuzzy
 msgid "failed to write the log file"
-msgstr "zapisanie pliku konfiguracji nie powiodło się"
+msgstr "zapisanie pliku dziennika nie powiodło się"
 
 #: src/virsh.c:3792
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "\n"
 "%s [options] [commands]\n"
@@ -1797,6 +1810,7 @@ msgstr ""
 "    -h | --help             ta pomoc\n"
 "    -q | --quiet            tryb cichy\n"
 "    -t | --timing           wyświetla informacje o czasie\n"
+"    -l | --log <plik>       przekaż dziennik do pliku\n"
 "    -v | --version          wersja programu\n"
 "\n"
 "  polecenia (tryb nieinteraktywny):\n"
