--- a/po/ru.po
+++ b/po/ru.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ru\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-06-08 11:32+0200\n"
+"POT-Creation-Date: 2007-06-13 11:27+0200\n"
 "PO-Revision-Date: 2007-05-02 08:00+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -24,7 +24,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.9.1\n"
 
-#: src/libvirt.c:299 src/hash.c:664
+#: src/libvirt.c:303 src/hash.c:664
 msgid "allocating connection"
 msgstr "выделение соединения"
 
@@ -657,6 +657,11 @@ msgstr "помощь печати"
 msgid "Prints global help or command specific help."
 msgstr "Распечатывает общую информацию помощи или помощь для отдельных команд."
 
+#: src/virsh.c:312
+#, fuzzy
+msgid "name of command"
+msgstr "имя неактивного домена"
+
 #: src/virsh.c:324
 msgid ""
 "Commands:\n"
@@ -957,7 +962,7 @@ msgid "cap for XEN_CREDIT"
 msgstr ""
 
 #: src/virsh.c:1054 src/virsh.c:1058
-msgid "Scheduler:"
+msgid "Scheduler"
 msgstr ""
 
 #: src/virsh.c:1058
@@ -1611,6 +1616,15 @@ msgstr "команда '%s' не существует"
 #: src/virsh.c:2872
 msgid "  NAME\n"
 msgstr "  ИМЯ\n"
+
+#: src/virsh.c:2876
+#, fuzzy
+msgid ""
+"\n"
+"  SYNOPSIS\n"
+msgstr ""
+"\n"
+"  ПАРАМЕТРЫ\n"
 
 #: src/virsh.c:2883
 msgid ""
