--- a/po/sv.po
+++ b/po/sv.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: libvirt\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-06-08 11:32+0200\n"
+"POT-Creation-Date: 2007-06-13 11:27+0200\n"
 "PO-Revision-Date: 2007-04-17 15:16-0400\n"
 "Last-Translator: Magnus Larsson <fedoratrans@gmail.com>\n"
 "Language-Team: Swedish <sv@li.org>\n"
@@ -17,7 +17,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: src/libvirt.c:299 src/hash.c:664
+#: src/libvirt.c:303 src/hash.c:664
 msgid "allocating connection"
 msgstr "allokerar anslutning"
 
@@ -650,6 +650,11 @@ msgstr "skriv ut hjälp"
 msgid "Prints global help or command specific help."
 msgstr "Skriv ut global hjälp eller beordra speficik hjälp."
 
+#: src/virsh.c:312
+#, fuzzy
+msgid "name of command"
+msgstr "namn för den inaktiva domänen"
+
 #: src/virsh.c:324
 msgid ""
 "Commands:\n"
@@ -950,7 +955,7 @@ msgid "cap for XEN_CREDIT"
 msgstr ""
 
 #: src/virsh.c:1054 src/virsh.c:1058
-msgid "Scheduler:"
+msgid "Scheduler"
 msgstr ""
 
 #: src/virsh.c:1058
@@ -1603,6 +1608,15 @@ msgstr "kommandot '%s' finns inte"
 #: src/virsh.c:2872
 msgid "  NAME\n"
 msgstr "  NAMN\n"
+
+#: src/virsh.c:2876
+#, fuzzy
+msgid ""
+"\n"
+"  SYNOPSIS\n"
+msgstr ""
+"\n"
+"  FLAGGOR\n"
 
 #: src/virsh.c:2883
 msgid ""
