--- a/po/ta.po
+++ b/po/ta.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ta\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-06-08 11:32+0200\n"
+"POT-Creation-Date: 2007-06-13 11:27+0200\n"
 "PO-Revision-Date: 2007-04-17 16:23+0530\n"
 "Last-Translator: I felix <ifelix@redhat.com>\n"
 "Language-Team: Tamil <fedora-trans-ta@redhat.com>\n"
@@ -23,7 +23,7 @@ msgstr ""
 "\n"
 "\n"
 
-#: src/libvirt.c:299 src/hash.c:664
+#: src/libvirt.c:303 src/hash.c:664
 msgid "allocating connection"
 msgstr "இணைப்புகள் ஒதுக்கப்படுகிறது"
 
@@ -657,6 +657,11 @@ msgstr "அச்சு உதவி"
 msgid "Prints global help or command specific help."
 msgstr "முழுமையான உதவி அல்லது கட்டளை குறிப்பிட்ட உதவியை அச்சிடுகிறது."
 
+#: src/virsh.c:312
+#, fuzzy
+msgid "name of command"
+msgstr "செயலற்ற செயற்களப் பெயர்"
+
 #: src/virsh.c:324
 msgid ""
 "Commands:\n"
@@ -957,7 +962,7 @@ msgid "cap for XEN_CREDIT"
 msgstr ""
 
 #: src/virsh.c:1054 src/virsh.c:1058
-msgid "Scheduler:"
+msgid "Scheduler"
 msgstr ""
 
 #: src/virsh.c:1058
@@ -1615,6 +1620,15 @@ msgstr "கட்டளை '%s' இல்லை"
 #: src/virsh.c:2872
 msgid "  NAME\n"
 msgstr "  பெயர்\n"
+
+#: src/virsh.c:2876
+#, fuzzy
+msgid ""
+"\n"
+"  SYNOPSIS\n"
+msgstr ""
+"\n"
+" விருப்பங்கள்\n"
 
 #: src/virsh.c:2883
 msgid ""
