--- a/po/uk.po
+++ b/po/uk.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: libvirt\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-06-08 11:32+0200\n"
+"POT-Creation-Date: 2007-06-13 11:27+0200\n"
 "PO-Revision-Date: 2007-04-11 14:58+0300\n"
 "Last-Translator: Maxim V. Dziumanenko <dziumanenko@softprom.kiev.ua>\n"
 "Language-Team: Ukrainian <uk@li.org>\n"
@@ -15,7 +15,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: src/libvirt.c:299 src/hash.c:664
+#: src/libvirt.c:303 src/hash.c:664
 msgid "allocating connection"
 msgstr "виділення з'єднання"
 
@@ -651,6 +651,11 @@ msgstr "довідка з друку"
 msgid "Prints global help or command specific help."
 msgstr "Виводить загальну інформацію довідки або довідку для окремих команд."
 
+#: src/virsh.c:312
+#, fuzzy
+msgid "name of command"
+msgstr "назва неактивного домену"
+
 #: src/virsh.c:324
 msgid ""
 "Commands:\n"
@@ -952,7 +957,7 @@ msgid "cap for XEN_CREDIT"
 msgstr ""
 
 #: src/virsh.c:1054 src/virsh.c:1058
-msgid "Scheduler:"
+msgid "Scheduler"
 msgstr ""
 
 #: src/virsh.c:1058
@@ -1612,6 +1617,15 @@ msgstr "команда '%s' не існує"
 #: src/virsh.c:2872
 msgid "  NAME\n"
 msgstr "  НАЗВА\n"
+
+#: src/virsh.c:2876
+#, fuzzy
+msgid ""
+"\n"
+"  SYNOPSIS\n"
+msgstr ""
+"\n"
+"  ПАРАМЕТРИ\n"
 
 #: src/virsh.c:2883
 msgid ""
