--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: zh_TW\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-06-08 11:32+0200\n"
+"POT-Creation-Date: 2007-06-13 11:27+0200\n"
 "PO-Revision-Date: 2007-04-10 16:18+1000\n"
 "Last-Translator: Chester Cheng <ccheng@redhat.com>\n"
 "Language-Team: Traditional Chinese <zh_TW@li.org>\n"
@@ -17,7 +17,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.11.4\n"
 
-#: src/libvirt.c:299 src/hash.c:664
+#: src/libvirt.c:303 src/hash.c:664
 msgid "allocating connection"
 msgstr "正在分配連線"
 
@@ -651,6 +651,11 @@ msgstr "列印求助訊息"
 msgid "Prints global help or command specific help."
 msgstr "列印一般求助訊息，或特定指令的求助訊息。"
 
+#: src/virsh.c:312
+#, fuzzy
+msgid "name of command"
+msgstr "非作用中區域的名稱"
+
 #: src/virsh.c:324
 msgid ""
 "Commands:\n"
@@ -950,7 +955,7 @@ msgid "cap for XEN_CREDIT"
 msgstr ""
 
 #: src/virsh.c:1054 src/virsh.c:1058
-msgid "Scheduler:"
+msgid "Scheduler"
 msgstr ""
 
 #: src/virsh.c:1058
@@ -1608,6 +1613,15 @@ msgstr "「%s」指令不存在"
 #: src/virsh.c:2872
 msgid "  NAME\n"
 msgstr "  名稱\n"
+
+#: src/virsh.c:2876
+#, fuzzy
+msgid ""
+"\n"
+"  SYNOPSIS\n"
+msgstr ""
+"\n"
+"  選項\n"
 
 #: src/virsh.c:2883
 msgid ""
